# pysetup-yaml2json

./: .gitignore  README.md  README.rst  pysetup_yaml2json.py  setup.cfg
