[metadata]
name = pysetup-yaml2json
version = 0.9.0
summary = A command for pysetup to convert yaml files to json
download_url = UNKNOWN
home_page = https://github.com/LEW21/pysetup-yaml2json
author = Janusz Lewandowski
author_email = lew21@enves.pl
classifier = License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
modules = pysetup_yaml2json
