[metadata]
name = pysetup-yaml2json
version = 1.0
summary = A command for pysetup to convert yaml files to json
home_page = https://github.com/LEW21/pysetup-yaml2json
download_url = http://pypi.python.org/pypi/pysetup-yaml2json
author = Janusz Lewandowski
author_email = lew21@enves.pl
description-file = README.rst
classifier = License :: OSI Approved :: MIT License
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
requires-dist =
	pyyaml

[files]
modules = pysetup_yaml2json
